# smel

./: README.md  anthropic_batch.py  change_domain.py  chatgpt_pair_matches_prompt_with_optimizations.md  constants.py  convert_data_files_hf.py  convert_openai_passages.py  corrupt_context.py  evaluate_model_on_questions.py  extract_agency_names.py  fetch_anthropic_batches.py  fetch_openai_batches.py  few_shot_examples.py  filter_gov_questions.py  filter_natural_questions.py  filter_wiki_questions.py  find_contradictions.py  generate_new_facts.py  generate_new_facts_news.py  generate_new_facts_politics.py  get_atomic_facts.py  gpt_4o_test.py  grade_answers.py  multi_gpu_inference.py  openai_batch.py  pyproject.toml  reformat_new_facts_politics.py  remove_no_person_articles.py  rewrite_facts_as_questions.py  tempo.py  tempo2.py
fact_leakage/: convert_openai_passages.py  few_shot_examples.py  generate_fact_list.py  generate_passages.py  generate_summaries.py  grade_summaries.py  make_plots.py  tempo.py  tempo2.py  tempo3.py
smel/data/: c4-0000.json  countries.txt  us_cities.txt
smel/scripts/: anthropic_batch.py  consolidate_scores.py  convert_data_files_hf.py  convert_openai_passages.py  evaluate_model_on_questions.py  evaluate_model_on_questions_humaneval.py  extract_entity_names.py  fact_order.py  fetch_anthropic_batches.py  fetch_openai_batches.py  generate_summaries.py  grade_answers.py  grade_summaries.py  openai_batch.py
smel/scripts/real_data/: README.md  chatgpt_pair_matches.md  (+4 more)
smel/utils/: constants.py  few_shot_examples.py  templates.py  utils.py
(+5 files in other folders)
